assets/sass/components/navbar.scss
@charset "UTF-8";

/*doc
---
title: Navbar
name: a-navbar
category: Components - Navbar
---

```html_example
<nav class="navbar pull-right" role="navigation">
  <div class="container-fluid">
    <!-- Brand and toggle get grouped for better mobile display -->
    <div class="navbar-header">
      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
        <span class="sr-only">Toggle navigation</span>
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
      </button>
    </div>

    <!-- Collect the nav links -->
    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
      <ul class="nav navbar-nav">
        <li class="active"><a href="#">LPC</a></li>
        <li><a href="#">Prestations</a></li>
        <li><a href="#">Projets</a></li>
        <li><a href="#">Fondation</a></li>
        <li><a href="#">Boutique</a></li>
        <li><a class="btn btn-success" href="#">Nous soutenir</a></li>
      </ul>
    </div><!-- /.navbar-collapse -->
  </div><!-- /.container-fluid -->
</nav>
```
*/

.nav.secondary {
  > li {
    & > a:not(.btn) {
      font-size: 0.8em;
    }
  }
}

.navbar-collapse {
  &.in {
    overflow: visible;
  }
  .secondary {
    li {
      display: inline-block;
    }
  }
}

.navbar-toggle {
  border: 1px solid $outrageous-orange;
  transition: all 400ms;
  .icon-bar {
    transition: all 400ms;
    background: $outrageous-orange;
    &:nth-child(2), &:last-child {opacity: 0;}
  }
  &.collapsed {
    border-color: transparent;
    > .icon-bar {
      background: $pompadour;
      &:nth-child(2), &:last-child {opacity: 1;}
    }
  }
}

.navbar-nav > li {
  padding-left: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
  @media only screen and (min-width: $screen-sm-min) {
    padding-bottom: 0;
    &.last {
      padding-right: 0;
    }
  }
  & > a:not(.btn) {
    position: relative;
    transition: all 200ms;
    font-size: 18px;
    padding-left: 0;
    padding-right: 0;
    &:after {
      content: '';
      position: absolute;
      height: 2px;
      width: 0;
      bottom: 0;
      left: 50%;
      background: $burnt-orange;
      transition: all 200ms;
    }
    @media only screen and (min-width: $screen-sm-min) {
      &:hover,
      &:focus {
        background: none;
        &:after {
          width: 100%;
          left: 0;
        }
      }
    }
  }
  &.active > a,
  a.active {
    &:after {
      width: 100%;
      left: 0;
    }
  }
  & > a.btn-success {
    transition: none;
    @extend .btn;
    @extend .btn-success;
    @media only screen and (max-width: $screen-xs-max) {
      width: 100%;
    }
    &:hover {
      @extend .btn:hover;
      @extend .btn-success:hover;
    }
  }
}

@media only screen and (min-width: $screen-sm-min) {
  .navbar-nav {
    float: none;
  }
}

.main-navigation {
  @media only screen and (min-width: $screen-md-min) {
    float: right;
  }
}

.dropdown-toggle-hover {
  &:hover {
    + .dropdown-menu {
      display: block;
    }
  }
}

.dropdown-menu {
  @media only screen and (min-width: $screen-md-min) {
    right: 15px;
    left: auto;
  }
  @media only screen and (max-width: $screen-sm-max) {width: 100%;}
  padding: 0;
  border: 0;
  border-radius: 0;
  top: 46px;
  &:hover {
    display: block;
  }
  li {
    &.active a,
    a.active {
      border-color: $burnt-orange;
    }
    a {
      border-left: 2px solid #fff;
      transition: all 300ms;
      color: $link-color;
      padding: 10px 20px;
      &:hover {
        border-color: $burnt-orange;
      }
    }
  }
}

/*doc
---
title: Inverted navbar
name: b-inverted-navbar
category: Components - Navbar
---

```html_example
<nav class="navbar navbar-inverse" role="navigation">
  <div class="container-fluid">
    <!-- Brand and toggle get grouped for better mobile display -->
    <div class="navbar-header">
      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
        <span class="sr-only">Toggle navigation</span>
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
      </button>
      <a class="navbar-brand" href="#">Brand</a>
    </div>

    <!-- Collect the nav links -->
    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
      <ul class="nav navbar-nav">
        <li class="active"><a href="#">Link</a></li>
        <li><a href="#">Link</a></li>
        <li><a href="#">Link</a></li>
        <li><a href="#">Link</a></li>
        <li><a href="#">Link</a></li>
      </ul>
    </div><!-- /.navbar-collapse -->
  </div><!-- /.container-fluid -->
</nav>
```
*/



/*doc
---
title: Form
name: c-form
category: Components - Navbar
---

```html_example
<nav class="navbar navbar-default" role="navigation">
  <div class="container-fluid">
    <div class="navbar-header">
      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
        <span class="sr-only">Toggle navigation</span>
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
      </button>
      <a class="navbar-brand" href="#">Brand</a>
    </div>
    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
      <form class="navbar-form navbar-left" role="search">
        <div class="form-group">
          <input type="text" class="form-control" placeholder="Search">
        </div>
        <button type="submit" class="btn btn-default">Submit</button>
      </form>
    </div>
  </div>
</nav>
```
*/



/*doc
---
title: Text
name: d-text
category: Components - Navbar
---

```html_example
<nav class="navbar navbar-default" role="navigation">
  <div class="container-fluid">
    <div class="navbar-header">
      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-4">
        <span class="sr-only">Toggle navigation</span>
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
      </button>
      <a class="navbar-brand" href="#">Brand</a>
    </div>
    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-4">
      <p class="navbar-text">Signed in as Mark Otto</p>
    </div>
  </div>
</nav>
```
*/



/*doc
---
title: Dropdown
name: e-dropdown
category: Components - Navbar
---

```html_example
<nav class="navbar navbar-default" role="navigation">
  <div class="container-fluid">
    <div class="navbar-header">
      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-4">
        <span class="sr-only">Toggle navigation</span>
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
      </button>
      <a class="navbar-brand" href="#">Brand</a>
    </div>
    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-4">
      <ul class="nav navbar-nav">
        <li class="dropdown">
          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
          <ul class="dropdown-menu">
            <li><a href="#">Action</a></li>
            <li><a href="#">Another action</a></li>
            <li><a href="#">Something else here</a></li>
            <li class="divider"></li>
            <li><a href="#">Separated link</a></li>
            <li class="divider"></li>
            <li><a href="#">One more separated link</a></li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</nav>
```
*/

